--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
+    "react-native-redash": "^16.0.4",
+    "react-native-responsive-linechart": "^5.3.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
@@ -39,6 +42,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "victory-native": "^35.3.1",
     "yup": "^0.32.8"
   },
   "devDependencies": {
