--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "~0.63.4",
     "react-native-chart-kit": "^6.8.1",
     "react-native-cli": "^2.0.1",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^3.7.1",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
