--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "FonYonetim",
-  "displayName": "FonYonetim",
+  "displayName": "Fon Portföy Yönetim",
   "expo": {
     "name": "FonYonetim",
     "slug": "FonYonetim",
