--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "react-native-responsive-linechart": "^5.3.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-swipe-list-view": "^3.2.5",
+    "react-native-swipe-up-down": "^1.0.7",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
