--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/admob": "^10.4.1",
     "@react-native-firebase/app": "^10.3.0",
     "@react-native-firebase/auth": "^10.3.1",
     "@react-native-firebase/database": "^10.3.1",
@@ -28,6 +29,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-admob": "^2.0.0-beta.6",
     "react-native-chart-kit": "^6.8.1",
     "react-native-cli": "^2.0.1",
     "react-native-datepicker": "^1.7.2",
