--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-iap": "^5.2.5",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^16.0.4",
